--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         }
         .container {
             max-width: 600px;
+            width: 100%;
             background: white;
             padding: 20px;
             border-radius: 8px;
