--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body onload="generateDefaultKey()">
 
 <div class="container">
-    <h1 class="text-center">AES 加密解密与随机密钥生成器</h1>
+    <h1 class="text-center">AES加密解密</h1>
     <form>
         <div class="form-group">
             <label for="message">消息:</label>
